# lua_in_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  run.sh
src/: .ycm_extra_conf.py  c_array_oper.cpp  c_array_oper.h  compile_commands.json  extend_program_demo.cpp  extend_program_demo.h  lua.hpp  lua_call_cpp.c  lua_call_cpp.cpp  lua_call_cpp.h  lua_function_caller.cpp  lua_function_caller.h  lua_so.cpp  lua_so.h  luatest.cpp  luatest.h  main.cpp  print_lua_stack.cpp  print_lua_stack.h  run.sh  simple_lua_interpreter.cpp  simple_lua_interpreter.h
src/include/: inc.h  lua_util.cpp  lua_util.h  print_util.h
src/lua_51/: linit.c  luaconf.h
src/res/: call_cpp.lua  callbyso.lua  config.lua  debuglib_test.lua  extend_demo.lua  io_test.lua  main.lua  math_test.lua  oslib_test.lua  string_len_of_lua.lua  string_test.lua  temp.lua
src/res/test/: t.lua
src/test_so/: Makefile  hello.lua  test.cpp
